--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "stylelint",
     "stylistic"
   ],
+  "type": "module",
   "main": "dist/main.js",
   "files": [
     "config",
@@ -30,48 +31,50 @@
   ],
   "dependencies": {
     "is-plain-object": "^5.0.0",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.32",
     "postcss-media-query-parser": "^0.2.3",
     "postcss-value-parser": "^4.2.0",
     "style-search": "^0.1.0"
   },
   "peerDependencies": {
-    "stylelint": "^15.0.0"
+    "stylelint": "^16.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^18.19.3",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "common-tags": "^1.8.2",
+    "cross-env": "^7.0.3",
     "deepmerge": "^4.3.1",
-    "eslint": "^8.4.1",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.5.0",
-    "jest-fail-on-console": "^3.1.1",
-    "jest-preset-stylelint": "^6.1.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.6.0",
+    "jest": "^29.7.0",
+    "jest-fail-on-console": "^3.1.2",
+    "jest-light-runner": "^0.6.0",
+    "jest-preset-stylelint": "^6.3.2",
     "postcss-html": "^1.5.0",
     "postcss-jsx": "^0.36.4",
     "postcss-less": "^6.0.0",
     "postcss-sass": "^0.5.0",
-    "postcss-scss": "^4.0.6",
-    "postcss-styled-syntax": "^0.4.0",
+    "postcss-scss": "^4.0.9",
+    "postcss-styled-syntax": "^0.5.0",
     "postcss-syntax": "^0.36.2",
-    "stylelint": "^15.0.0",
-    "stylelint-config-standard": "^31.0.0",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard": "^35.0.0",
     "sugarss": "^4.0.1",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "reinstall": "rm -rf node_modules && rm -f yarn-error.log && yarn install --check-files",
-    "build": "rm -rf dist && tsc",
+    "build": "tsc",
     "build:production": "yarn build --declarationMap false --inlineSourceMap false",
-    "test": "jest --config .jest/jest.config.ts --passWithNoTests",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules --no-warnings --loader ts-node/esm\" jest --config .jest/jest.config.ts --passWithNoTests",
     "test:watch": "yarn test --watch",
     "test:output": "yarn test --json --outputFile=.jest/jest.result.json",
     "test:coverage": "jest --clearCache && rm -rf .jest/coverage && yarn test:output --coverage",
